Add MinIO API: uploadImage, getImage and deletionImage
